some cleaning, fixed overflow on long titles

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -16,7 +16,7 @@
 }
 
 body {
-    min-height: 100vh;
+    height: 100vh;
     display: flex;
     flex-direction: column;
 }
